2007-12-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/WebCal.py: Temp fixes to keep running (bug #1441)

2007-12-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/_RelationView.py: Made suggestion by Stian:
	http://www.gramps-project.org/wiki/index.php?title=GEPS_002:_RelationView_Expand_and_Collapse#User_Contributions
	and addressed feature request #1404

2007-12-14 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditEvent.py: first attribute tab THEN backref
	* src/DisplayTabs/_BackRefList.py: whitespace change
	* src/gen/lib/repo.py: correct error with source backref too
	* src/gen/lib/personref.py:
	* src/gen/lib/mediaref.py:
	* src/gen/lib/childref.py:
	* src/gen/lib/place.py:
	* src/gen/lib/address.py:
	* src/gen/lib/src.py:
	* src/gen/lib/person.py:
	* src/gen/lib/mediaobj.py:
	* src/gen/lib/eventref.py:
	* src/gen/lib/name.py:
	* src/gen/lib/family.py:
	* src/gen/lib/event.py:
	* src/gen/lib/ldsord.py:
	Add get_note_child_list method to allow recursive deletion of notes in
	child objects
	* src/gen/lib/notebase.py: add remove_note that recursively searches
		in the child secondary objects
	* src/plugins/Check.py: fix broken note links, fix broken repo-source link

2007-12-14  Jerome Rapinat <romjerome@yahoo.fr>
	* src/plugins/holidays.xml: update french holidays.

2007-12-14  Zdenek Hatas  <zdenek.hatas@gmail.com>
	* src/plugins/holidays.xml: reencoded to utf-8, added czech
	   national holidays.

2007-12-13  Jim Sack <jgsack@san.rr.com>
	src/GrampsDbUtils/_GedcomParse.py : #1439: avoid WARN message
	fix subordinates under NOTE causing log WARN message
	note: unittest src/GrampsDbUtils/test/GR_test.py verifies

2007-12-13  Jim Sack <jgsack@san.rr.com>
	src/test/gedread_util.py : added to support testing
	src/test/test/gedread_util_test.py : added to test util above
	src/GrampsDbUtils/test/GR_test.py : added 1st try at testing
	first try at some gedcon read testing

2007-12-13  Jim Sack <jgsack@san.rr.com>